terraform/runner.tf
resource "aws_instance" "github_runner" {
  ami                         = data.aws_ami.ubuntu.id
  instance_type               = "t3.medium"
  subnet_id                   = values(aws_subnet.public)[0].id
  security_groups             = [aws_security_group.runner_sg.id]
  key_name                    = aws_key_pair.salon_key.key_name
  associate_public_ip_address = true

  user_data = templatefile("${path.module}/runner_user_data.sh.tpl", {
    github_repo       = var.github_repo
    runner_token      = var.runner_token
    GH_RUNNER_VERSION = var.gh_runner_version
  })

  depends_on = [
    aws_subnet.public,
    aws_subnet.private,
    aws_key_pair.salon_key
  ]

  tags = {
    Name = "github-actions-kubespray-runner"
  }
}
